--- a/css/styles.css
+++ b/css/styles.css
@@ -129,6 +129,7 @@ img {
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: #ffffff;
+  margin-bottom: 32px;
 }
 
 /*Герой, кнопка*/
