--- a/css/styles.css
+++ b/css/styles.css
@@ -34,13 +34,16 @@ img {
 }
 /*Контейнер меню*/
 
+header {
+  border-bottom: 1px solid #ececec;
+}
+
 .container-menu {
-  width: 1170px;
+  width: 1200px;
   margin-left: auto;
   margin-right: auto;
   display: flex;
   padding: 0px 15px;
-  border-bottom: 1px solid #ececec;
 }
 
 .nav {
@@ -117,8 +120,9 @@ img {
 /* Контейнер Hero*/
 
 .container-hero {
-  width: 1600px;
   background-color: #2f303a;
+  padding-top: 200px;
+  padding-bottom: 200px;
 }
 
 .hero-title {
@@ -151,8 +155,13 @@ img {
 }
 /*Контейнер features*/
 
+.section-features {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+
 .container-features {
-  width: 1170px;
+  width: 1200px;
   margin: 0px auto;
   padding: 0px 15px;
 }
@@ -173,7 +182,6 @@ img {
 }
 .section-features .list {
   display: flex;
-  padding-top: 94px;
 }
 .section-features .item:not(:last-child) {
   margin-right: 30px;
@@ -193,20 +201,14 @@ img {
 }
 /*Контейнер work*/
 
+.work {
+  padding-bottom: 94px;
+}
+
 .container-work {
-  width: 1170px;
+  width: 1200px;
   margin: 0px auto;
   padding: 0px 15px;
-}
-.section-title {
-  margin-bottom: 50px;
-  padding-top: 94px;
-
-  color: var(--primary-text-color);
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.17;
-  text-align: center;
 }
 .container-work .list {
   display: flex;
@@ -216,10 +218,24 @@ img {
 }
 /*Контейнер team*/
 
+.section-team {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+
 .container-team {
-  width: 1170px;
-  margin: 0px auto 0px 94px;
-  padding: 0px 15px 0px 15px;
+  width: 1200px;
+  margin: 0px auto;
+  padding: 0px 15px;
+}
+.section-title {
+  margin-bottom: 50px;
+
+  color: var(--primary-text-color);
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.17;
+  text-align: center;
 }
 .container-team .list {
   display: flex;
@@ -234,6 +250,7 @@ img {
 }
 .team-title {
   margin-bottom: 10px;
+  text-align: center;
 
   color: var(--primary-text-color);
   font-weight: 500;
@@ -243,19 +260,23 @@ img {
 .team-text {
   font-size: 16px;
   line-height: 1.19;
+  text-align: center;
 }
 .footer {
   background-color: #2f303a;
-  width: 1600px;
   height: 252px;
 }
-/*Контейнер контакти*/
+/*Контейнер контакти (footer)*/
+
+.footer {
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
 
 .container-contacts {
-  width: 1170px;
-  margin-right: auto;
+  width: 1200px;
+  margin: 0px auto;
   padding: 0px 15px;
-  padding: 60px 0px 0px 118px;
 }
 .container-contacts .logo {
   color: #ffffff;
@@ -299,8 +320,13 @@ img {
 }
 /*Контейнер портфоліо (button)*/
 
+.button-portfolio {
+  padding-top: 94px;
+  padding-bottom: 94px;
+  }
+
 .container-button {
-  width: 1170px;
+  width: 1200px;
   margin-right: auto;
   margin-left: auto;
   padding: 0px 15px;
@@ -310,9 +336,8 @@ img {
 }
 .portfolio {
   display: flex;
-  margin-left: 297px;
-  padding-top: 94px;
-  padding-bottom: 34px;
+ justify-content: center;
+  padding-bottom: 50px;
 }
 .portfolio-button {
   border: none;
@@ -336,41 +361,41 @@ img {
 /*Контейнер портфоліо work*/
 
 .container-portfolio {
-  width: 1170px;
+  width: 1200px;
   margin-right: auto;
   margin-left: auto;
-  padding: 0px 15px;
+  padding: 50px 15px 0px 15px;
 }
 .work-link {
   margin-bottom: 20px;
+ border: 1px solid #ececec;
 }
-.work {
+.img {
+  border: 1px solid #ececec;
+}
+.work-portfolio {
   display: flex;
   flex-wrap: wrap;
-  margin-left: calc(-1 * var(--card-set-gap));
-  margin-top: calc(-1 * var(--card-set-gap));
-}
-.work .item {
-  flex-basis: calc(100% / 3 - var(--card-set-gap));
-  margin-left: var(--card-set-gap);
-  margin-top: var(--card-set-gap);
-}
-.card {
-  box-shadow: var(--card-shadow);
-  border-radius: 4px;
-  overflow: hidden;
+  gap: 30px;
+ }
+
 }
 .card-content {
-  padding: 15px;
+  padding: 15px 24px;
 }
 .work-titly {
+  text-align: center;
+  margin-bottom: 4px;
+
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
   color: #212121;
-  margin-bottom: 4px;
+  
 }
 .work-text {
+  text-align: center;
+
   font-size: 16px;
   line-height: 1.9;
   color: #757575;
