--- a/css/styles.css
+++ b/css/styles.css
@@ -3,8 +3,7 @@
   --title-text-color: #757575;
   --accent-color: #2196f3;
   --primary-white-color: #ffffff;
-  --card-set-gap: 30px;
-}
+  }
 body {
   font-family: roboto, sans-serif;
   color: var(--title-text-color);
@@ -242,11 +241,14 @@ header {
 }
 .container-team .item:not(:last-child) {
   margin-right: 30px;
-  margin-bottom: 94px;
-}
+  }
 .container-team .card {
-  margin-bottom: 30px;
-  border-radius: 0px 0px 4px 4px;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+border-radius: 0px 0px 4px 4px;
+}
+.team-content {
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
 .team-title {
   margin-bottom: 10px;
@@ -289,7 +291,7 @@ header {
   margin-bottom: 20px;
   display: inline-block;
 
-  color: #000;
+  color: #FFFFFF;
   font-family: Raleway, sans-serif;
   font-weight: 700;
   font-size: 26px;
@@ -323,8 +325,9 @@ header {
 .button-portfolio {
   padding-top: 94px;
   padding-bottom: 94px;
+  border: 1px solid #EEEEEE;
+ border-top: none;
   }
-
 .container-button {
   width: 1200px;
   margin-right: auto;
@@ -337,8 +340,8 @@ header {
 .portfolio {
   display: flex;
  justify-content: center;
-  padding-bottom: 50px;
-}
+ margin-bottom: 50px;
+ }
 .portfolio-button {
   border: none;
   padding: 6px 22px;
@@ -364,37 +367,29 @@ header {
   width: 1200px;
   margin-right: auto;
   margin-left: auto;
-  padding: 50px 15px 0px 15px;
-}
-.work-link {
-  margin-bottom: 20px;
- border: 1px solid #ececec;
-}
-.img {
-  border: 1px solid #ececec;
+  padding: 0px 15px ;
+  
 }
 .work-portfolio {
   display: flex;
   flex-wrap: wrap;
   gap: 30px;
- 
+}
 .card-content {
-  padding: 15px 24px;
+  padding: 20px 24px;
+  border: 1px solid #EEEEEE;
+border-top: none;
 }
 .work-titly {
-  text-align: center;
-  margin-bottom: 4px;
+    margin-bottom: 4px;
 
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
   color: #212121;
-  
-}
+  }
 .work-text {
-  text-align: center;
-
-  font-size: 16px;
+   font-size: 16px;
   line-height: 1.9;
   color: #757575;
 }
